--- a/index.html
+++ b/index.html
@@ -398,8 +398,10 @@
 						</div><!--/.contact-box-->
 					</div><!--/.col-->
 					<div class="col col-md-6 matchheightbox">
-						<div class="map-section">
-							<div class="map-canvas" id="contact-map" data-content="<h4>Shivangi Tak</h4><address>PO Box 123 Kishangarh, Ajmer, INDIA.</address>"></div>
+						<div class="
+							    
+							    -section">
+							<div class="map-canvas" id="contact-map" data-content="<h4>Shivangi Tak</h4><address>Kishangarh Rajasthan.</address>"></div>
 						</div><!--/.map-section-->
 					</div><!--/.col-->
 				</div><!--/.row-->
