--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							<ul class="list list-style-01 m-b-40">
 								<li><strong>Name:</strong> Shivangi Tak</li>
 								<li><strong>Date of birth:</strong> 19 November 1999</li>
-								<li><strong>Email:</strong> stak9517@gmail.com</li>
+								<li><strong>Email:</strong> shivangitak9@gmail.com</li>
 								<li><strong>Phone:</strong> +91 1234567890</li>
 								<li><strong>Nationality:</strong> Indian</li>
 								<li><strong>Address:</strong> Kishangarh, Ajmer</li>
