--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 						<div class="col col-sm-12 col-lg-4">
 							<ul class="list list-style-01 m-b-40">
 								<li><strong>Name:</strong> Shivangi Tak</li>
-								<li><strong>Date of birth:</strong> 19 November 1999</li>
+								<li><strong>Date of birth:</strong> 18 November 1999</li>
 								<li><strong>Email:</strong> shivangitak9@gmail.com</li>
-								<li><strong>Phone:</strong> +91 1234567890</li>
+								<li><strong>Phone:</strong> +916377734255</li>
 								<li><strong>Nationality:</strong> Indian</li>
 								<li><strong>Address:</strong> Kishangarh, Ajmer</li>
 							</ul><!--/.list-style-01-->
