--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						<div class="col col-sm-6 col-lg-4">
 							<div class="about-contentbox last-p-no-margin">
 								<h3 class="title-style">Proffesional Profile</h3>
-								<p class="font-secondary text-darkgray">Myself SHIVANGI TAK, I'm live in Kishangarh(Ajmer). At present i'm studying BCA from " Shree Ratanlal Kanwarlal Patni Girls College, Kishangarh ".<p>My nick name is " Gudiya ", My parents & friends generally call me nick name.</p> I'm personally interested in becoming an Graphic Designer & Computer programming, however, there are many different career opportunities. I believe that a job should be like a hobby.I have good listening and communication skills.My life style is very simple.As for now I'm only focusing my attention on study. I'm being my true self with the values, dreams and goals that I have. Sometimes it is hard to introduce yourself because,you do not know where to start with...Thank You!.</p>
+								<p class="font-secondary text-darkgray">Myself SHIVANGI TAK, I'm live in Kishangarh(Ajmer). At present i'm studying BCA from " Shree Ratanlal Kanwarlal Patni Girls College, Kishangarh ".<p>My nick name is " Gudiya ",  I'm personally interested in becoming an Graphic Designer & Computer programming, however, there are many different career opportunities. I believe that a job should be like a hobby.I have good listening and communication skills.My life style is very simple.As for now I'm only focusing my attention on study. I'm being my true self with the values, dreams and goals that I have. Sometimes it is hard to introduce yourself because,you do not know where to start with...Thank You!.</p>
 							</div><!--/.about-contentbox-->
 						</div><!--/.col-->
 						<div class="col col-sm-12 col-lg-4">
