--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						<div class="col col-sm-6 col-lg-4">
 							<div class="about-contentbox last-p-no-margin">
 								<h3 class="title-style">Proffesional Profile</h3>
-								<p class="font-secondary text-darkgray">Myself SHIVANGI TAK, I'm live in Kishangarh(Ajmer).I'm personally interested in becoming an Computer programming, however, there are many different career opportunities. I believe that a job should be like a hobby.I have good listening and communication skills.My life style is very simple.As for now I'm only focusing my attention on study. I'm being my true self with the values, dreams and goals that I have. Sometimes it is hard to introduce yourself because,you do not know where to start with...Thank You!.</p>
+								<p class="font-secondary text-darkgray">Myself SHIVANGI TAK, I'm live in Kishangarh(Ajmer).I'm personally interested in becoming an Computer programming, however, there are many different career opportunities. I believe that a job should be like a hobby.  good listening and communication skills.My life style is very simple.As for now I'm only focusing my attention on study. I'm being my true self with the values, dreams and goals that I have. Sometimes it is hard to introduce yourself because,you do not know where to start with...Thank You!.</p>
 							</div><!--/.about-contentbox-->
 						</div><!--/.col-->
 						<div class="col col-sm-12 col-lg-4">
@@ -178,6 +178,17 @@
 			<!--about section end-->
 			
 			<!--education section start-->
+											<div class="experience-row clearfix m-b-30 animate" data-animate="fadeIn">
+									<div class="experience-col-left m-r-20 p-r-20">
+										<figure><img src="images/envato-logo.png" alt=""/></figure>
+										<div class="experience-details overflowhidden font-secondary">
+											<span class="text-white">Higher Secondary Education</span>
+											<strong class="text-uppercase text-primary">Raghukul Public Sea.Sr. School</strong>
+											<em class="years-duration font-primary">2016 - 2017</em>
+										</div><!--/.experience-details-->
+									</div><!--/.experience-col-->
+									<p class="overflowhidden m-0">Here i completed my senior secondary school qualification with the commerce.</p>
+
 			<div id="education" class="experience-section border-top-bottom animated-row">
 				<div class="row no-spacing-row">
 					<div class="col col-md-12 bg-black matchheightbox">
