--- a/index.html
+++ b/index.html
@@ -200,12 +200,14 @@
 									<div class="experience-col-left m-r-20 p-r-20">
 										<figure><img src="images/envato-logo.png" alt=""/></figure>
 										<div class="experience-details overflowhidden font-secondary">
-											<span class="text-white">Higher Secondary Education</span>
-											<strong class="text-uppercase text-primary">Raghukul Public Sea.Sr. School</strong>
+											<span class="text-white">SHRI RATANLAL KANWARLAL PATNI GIRLS' COLLEGE
+</span>
+											<strong class="text-uppercase text-primary">SHRI RATANLAL KANWARLAL PATNI GIRLS' COLLEGE
+</strong>
 											<em class="years-duration font-primary">2016 - 2017</em>
 										</div><!--/.experience-details-->
 									</div><!--/.experience-col-->
-									<p class="overflowhidden m-0">Here i completed my senior secondary school qualification with the commerce.</p>
+									<p class="overflowhidden m-0">I have completed my graduation in (Bachelors in Computer Application) from "Shri Ratanlal Kanwarlal Patni Girls College,Ajmer</p>
 								</div><!--/.experience-row-->
 								<div class="experience-row clearfix animate" data-animate="fadeIn">
 									<div class="experience-col-left m-r-20 p-r-20">
@@ -216,7 +218,7 @@
 											<em class="years-duration font-primary">2014 - 2015</em>
 										</div><!--/.experience-details-->
 									</div><!--/.experience-col-->
-									<p class="overflowhidden m-0">Here i completed my  secondary school qualification </p>
+									<p class="overflowhidden m-0">Completed Secondary education in Commerce</p>
 								</div><!--/.experience-row-->
 							</div><!--/.experience-list-->
 						</div>
