--- a/index.html
+++ b/index.html
@@ -189,9 +189,10 @@
 									<div class="experience-col-left m-r-20 p-r-20">
 										<figure><img src="images/envato-logo.png" alt=""/></figure>
 										<div class="experience-details overflowhidden font-secondary">
-											<span class="text-white">BCA</span>
-											<strong class="text-uppercase text-primary">Shri Ratanlal Kanwarlal Patni Girls' College</strong>
-											<em class="years-duration font-primary">2017 - Current</em>
+											<span class="text-white">Master of Computer Applications</span>
+											<strong class="text-uppercase text-primary">Maharshi Dayanand Saraswati University
+</strong>
+											<em class="years-duration font-primary">2020 - Current</em>
 										</div><!--/.experience-details-->
 									</div><!--/.experience-col-->
 									<p class="overflowhidden m-0">I have completed my graduation in (Bachelors in Computer Application) from "Shri Ratanlal Kanwarlal Patni Girls College,Ajmer"</p>
@@ -200,11 +201,12 @@
 									<div class="experience-col-left m-r-20 p-r-20">
 										<figure><img src="images/envato-logo.png" alt=""/></figure>
 										<div class="experience-details overflowhidden font-secondary">
-											<span class="text-white">SHRI RATANLAL KANWARLAL PATNI GIRLS' COLLEGE
+											<span class="text-white">Bachelor of Computer Application
+
 </span>
 											<strong class="text-uppercase text-primary">SHRI RATANLAL KANWARLAL PATNI GIRLS' COLLEGE
 </strong>
-											<em class="years-duration font-primary">2016 - 2017</em>
+											<em class="years-duration font-primary">2020</em>
 										</div><!--/.experience-details-->
 									</div><!--/.experience-col-->
 									<p class="overflowhidden m-0">I have completed my graduation in (Bachelors in Computer Application) from "Shri Ratanlal Kanwarlal Patni Girls College,Ajmer</p>
@@ -215,7 +217,7 @@
 										<div class="experience-details overflowhidden font-secondary">
 											<span class="text-white">Secondary Education</span>
 											<strong class="text-uppercase text-primary">Raghukul Public Sea.Sr. School</strong>
-											<em class="years-duration font-primary">2014 - 2015</em>
+											<em class="years-duration font-primary">2014 - 2017</em>
 										</div><!--/.experience-details-->
 									</div><!--/.experience-col-->
 									<p class="overflowhidden m-0">Completed Secondary education in Commerce</p>
