--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 											<em class="years-duration font-primary">2020</em>
 										</div><!--/.experience-details-->
 									</div><!--/.experience-col-->
-									<p class="overflowhidden m-0">I have completed my graduation in (Bachelors in Computer Application) from "Shri Ratanlal Kanwarlal Patni Girls College,Ajmer</p>
+									<p class="overflowhidden m-0">"I have completed my graduation in (Bachelors in Computer Application) from "Shri Ratanlal Kanwarlal Patni Girls College,Ajmer</p>
 								</div><!--/.experience-row-->
 								<div class="experience-row clearfix animate" data-animate="fadeIn">
 									<div class="experience-col-left m-r-20 p-r-20">
