--- a/index.html
+++ b/index.html
@@ -162,9 +162,7 @@
 							<ul class="list list-style-01 m-b-40">
 								<li><strong>Name:</strong> Shivangi Tak</li>
 								<li><strong>Date of birth:</strong> 18 November 1999</li>
-								<li><strong>Email:</strong> shivangitak9@gmail.com</li>
-								<li><strong>Phone:</strong> +916377734200</li>
-								<li><strong>Nationality:</strong> Indian</li>
+								<li><strong>Email:</strong> shivangitak9@gmail.com</li>								<li><strong>Nationality:</strong> Indian</li>
 								<li><strong>Address:</strong> Kishangarh, Ajmer</li>
 							</ul><!--/.list-style-01-->
 							<div class="cta-row">
